# Project_V2X

./: README.md
Cockpit/: Cockpit.ioc
Cockpit/Inc/: main.h
Cockpit/MQTT/: bluetooth_pub.cpp
Cockpit/Src/: main.c
Control/Inc/: main.h
RCcar/: RCcar.ioc
RCcar/Inc/: HC_SR04.h  main.h  motor.h
RCcar/Src/: HC_SR04.c  main.c  motor.c
iot_core/src/: go.mod  go.sum
iot_core/src/cmd/client/: metrics.go
iot_core/src/cmd/server/: core.go
iot_core/src/internal/auths/: auth.go
iot_core/src/internal/configs/: config.go  kube_config
iot_core/src/internal/controllers/: controller.go
iot_core/src/internal/models/: dbhandler.go  model.go  procedures.sql  triggers.sql
iot_core/src/internal/services/: recv_service.go  resource_service.go  send_service.go
iot_core/src/internal/tls/: ca.crt  client.crt  client.key  csr-encoded.txt  csr.yaml  iot-core.crt  iot-core.csr  iot-core.key
iot_core/src/internal/utils/: helper.go  init.go
iot_core/src/pkg/monitor/: metrics.go
iot_core/src/test/: client.go  go.mod  pub  pub.cpp  pub_org.cpp  sub  sub.cpp  test.go
lane_model/test_code/: test_solid_dashed.py  test_yolov11-seg.py
src/25.01.28_control_car_by_keyboard/project_ros/: CMakeLists.txt  package.xml
src/25.01.28_control_car_by_keyboard/project_ros/msg/: project_ros_msg.msg
src/25.01.28_control_car_by_keyboard/project_ros/src/: project_ros_pub.cpp
src/25.01.28_control_car_by_keyboard/project_ros_arduino/: project_ros.ino  project_ros_msg.h
src/25.01.30_one_line_follow_car/: line_following.py  requirements.txt
